# fuzzy-allocator

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
fuzzy_allocator/: fetch.py  fetch_historical_data.py  trading_funcs.py
