[project]
name = "fuzzy-allocator"
version = "0.1.0"
description = ""
authors = [
    {name = "Shayon Keating",email = "skeating99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "logger (>=1.4,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
